deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actis-deployments
  namespace: actis-development
  labels:
    app: actis
    environment: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: actis-website
  template:
    metadata:
      labels:
        app: actis-website
        environment: development
    spec:
      containers:
        - name: actis-website
          image: harbor.chay-techs.com/actis/website:develop_db63fa0
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: harbor-registry-key
