service.yml
apiVersion: v1
kind: Service
metadata:
  name: actis-service
  namespace: actis-development
  labels:
    app: actis
    environment: development
spec:
  selector:
    app: actis-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
