ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actis-ingress
  namespace: actis-development
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - development-actis.chay-techs.com
    secretName: ingress-tls-ssl
  rules:
  - host: development-actis.chay-techs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actis-service
            port:
              number: 80
